[Release] Fix inline code block nowrap issue (#7407)

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -489,7 +489,7 @@ $left-gutter: 64px;
     }
 
     code {
-        white-space: pre; // don't collapse spaces in inline code blocks
+        white-space: pre-wrap; // don't collapse spaces in inline code blocks
     }
 }
 
